== SGT release v1.0.0 - ??? ==

- Initial commit.
- Added template cmake files.
- Preparing for initial build of Module loader.
- Successfully built module loader.
- Compiled template launcher app.
- Successfully built template launcher with memory module.
- Added lunagen project.
- Added lua dependency.
- Added OSG dependencies to lunagen.
- Simplified cmake files.
- Added support for lua package generation.
- Adding initial implementation of lunagen kernel.
- Calling executeMain in lunagen launcher.
- Renamed lunagen to sgt.
- build LuaState class in sgt_kernel
- create/destroy lua state in kernel.cpp, using implementatoin from scLuaState
- execute main module in lua state
- return exit code from main module execution.
- Added doxygen tool.
- Preparing for plug_core reflection generation.
- Generated reflection for plug_core.
- Built plug_core and lua_core modules.
- Added additional core modules and lfs lib.
- Fixed issue with throw method.
- Added support for documentation generation.
- Moved DataMap in utils.
- Added support for doxmlparser module.
- Discarded per library compression support as this seems to brake the internal dll loading process.
- Added support for conditional dependency integration.
- Now using sgt as tool for binding generation.
- Added support for log level and verbosity specification on command line.
- Updated documentation.
- Added support for osg plug.
- Binding wx plug and removing hard dependency on module loading from memory. We will use software virtualisation eventually.
- Added support to build lunagen app.
- Prepared osg package.
- Rebuilt wx plug.
- Added wx pack.
- Added locale support and refactoring logger implementation. gui1 test still failing because of global profiler object missing.
- Added osgWX and gl modules.
- Added opengl module.
- Disabled profiler log file writing when profiler is disabled.