@@ -4,7 +4,7 @@ version.major = 1
 version.minor = 0
 version.patch = 0
 
-version.build = 18
-version.date = "03/24/14 21:37:46"
+version.build = 19
+version.date = "03/24/14 21:50:34"
 
 return version;
