@@ -42,3 +42,4 @@
 - Added osgWX and gl modules.
 - Added opengl module.
 - Disabled profiler log file writing when profiler is disabled.
+- Added updated control resource to executable for nicer wxWidgets design.
